# forestry_xml_parser

./: Cargo.toml  fetchedforestpropertydata.json  fetchedforestpropertydata.xml  forestpropertydata.json  forestpropertydata.xml  forestpropertydata_file_1_7.xml  forestpropertydata_file_MV18.json  forestpropertydata_file_MV18.xml  forestpropertydata_url.xml  forestpropertydata_url_1_9.json  new_forestpropertydata_file_1_7.xml  new_forestpropertydata_url_1_9.xml
src/: fetched_forest_property_data.rs  forest_property_data.rs  forest_property_data_namespaces.rs  lib.rs  main.rs  projection.rs
src/forest_property/: fetched_forest_property_data.rs  forest_property_data.rs  geometry.rs  mod.rs  stand.rs
